Replace deprecated new Double/Integer construction.